# roadnet-simulation

./: .gitignore  1.rou.xml  CMakeLists.txt  Makefile  README.md  TraCI_Python_Adjusted.py  cmake_install.cmake  config_defaults.h  data_cleaning.cpp  data_preparation.cpp  generate_fixed_route.py  generate_route_on_test_net_full.py  head.h  high.rou.xml  main.cpp  model_catching_sumo_v1.py  model_evaluation_v1.py  model_evaluation_v1_no_change.py  model_training_sumo_v1.py  model_training_sumo_v1_no_change.py  run_all_training_traci.sh  simulation.cpp  sumo_visual.sumocfg  test.net.xml  test_missed_green.py  update.cpp
Manhattan_Data/: Manhattan_network_BJ.txt  Manhattan_network_mapped.csv  Manhattan_network_raw.csv  Untitled.ipynb  connections_to_directions.csv  edge_id_to_features.csv
data/: 1.sumocfg  east_bottleneck_no_change.sumocfg  east_bottleneck_no_change_random_offset_seed20260708.sumocfg  free_all_no_change.sumocfg  free_all_no_change_random_offset_seed20260708.sumocfg  full.sumocfg  full_no_change.sumocfg  full_no_change_random_net.sumocfg  heavy_all_no_change.sumocfg  heavy_all_no_change_random_offset_seed20260708.sumocfg  light_all.sumocfg  light_all_seed1.sumocfg  light_all_seed1_no_change.sumocfg  light_all_seed1_no_change_random_offset_seed20260708.sumocfg  light_all_seed2_no_change.sumocfg  light_all_seed2_no_change_random_offset_seed20260708.sumocfg  medium_core_no_change.sumocfg  medium_core_no_change_random_offset_seed20260708.sumocfg  north_bottleneck_no_change.sumocfg  north_bottleneck_no_change_random_offset_seed20260708.sumocfg  old_test.net.xml  oversat_all_no_change.sumocfg  oversat_all_no_change_random_offset_seed20260708.sumocfg  south_bottleneck_no_change.sumocfg  south_bottleneck_no_change_random_offset_seed20260708.sumocfg  southwest_bottleneck_no_change.sumocfg  southwest_bottleneck_no_change_random_offset_seed20260708.sumocfg  test.net.xml  test_new.net.xml  test_random_offsets_seed20260706.net.xml  test_random_offsets_seed20260708.net.xml  tripinfo_1.xml  tripinfo_1_old_net.xml  tripinfo_east_bottleneck_no_change.xml  tripinfo_free_all_no_change.xml  tripinfo_heavy_all_no_change.xml  tripinfo_light_all_seed1_no_change.xml  tripinfo_light_all_seed2_no_change.xml  tripinfo_medium_core_no_change.xml  tripinfo_north_bottleneck_no_change.xml  (+5 more)
docs/: TODO_flow_feature_running_vs_waiting.md  TODO_time_repairing_and_waiting_buffer_length.md  extreme_group_route_offset_diagnosis.md  grouped_detailed_eval_report.md  grouped_speednet_eval_summary.md  interval2_lightweight_eval_summary.md  kinematic_full_no_change_summary.md  random_offset_full_no_change_eval_report.md  random_offset_network_offsets.csv  random_offset_network_seed20260708_offsets.csv  random_offset_network_seed20260708_summary.md  random_offset_network_summary.md  single_group_cams_eval_scripts.md  single_group_route_generation_summary.md  single_group_speed_net_interval1_eval_report.md
eval/: eval_distribution_metrics.csv  eval_distribution_metrics_extreme_only.csv  eval_distribution_metrics_non_extreme.csv  eval_extreme_duration_errors.csv  eval_extreme_membership.csv  eval_extreme_movement_time_summary.csv  eval_extreme_road_time_summary.csv  eval_extreme_route_summary.csv  eval_extreme_split_metrics.csv  eval_extreme_transition_time_summary.csv  eval_extreme_vehicle_movement_timeline.csv  eval_extreme_vehicle_road_timeline.csv  eval_grouped_metrics.csv  eval_grouped_metrics_extreme_only.csv  eval_grouped_metrics_non_extreme.csv  eval_summary.txt  sumo_eval.csv
scripts/: analyze_eval_by_vehicle_group.py  analyze_extreme_error_routes_offsets.py  analyze_signal_interactions.py  analyze_single_group_eval_runs.py  analyze_sumo_eval.py  capacity_formula_check.py  randomize_tl_offsets.py  run_all_single_group_cams_evals.sh  run_single_group_cams_eval.sh
train_data/: build_balanced_training_routes.py  data_generation_plan  generate_balanced_training_data.py  (+3 more)
(+85 files in other folders)
